themes/inbeat/assets/scss/pages/_home.scss
#hero {
    padding-top: 6.25rem;
    padding-bottom: 6.25rem;
    text-align: center;
    @include breakpoint(sm) {
        padding-top: calc(50vh - 12.5rem);
        padding-bottom: calc(50vh - 18rem);
    }
    h4 {
        width: 100%;
        margin-bottom: 4rem;
        @include breakpoint(sm) {
            margin: auto;
            margin-bottom: 5rem;
        }
    }
    .cta {
        a {
            display: block;
            margin: 0 auto 20px;
            width: 100%;
            @include breakpoint(31.25rem) {
                width: 16.75rem;
            }
            @include breakpoint(sm) {
                display: inline-block;
                margin: 0;
                &:first-child {
                    margin-right: 20px;
                }
            }
            &#hero-cta {
                @include breakpoint(sm-down) {
                    color: black;
                    border: none;
                    animation: crazy 2s infinite;
                }
            }
            span {
                font-weight: bold;
            }
        }
        a:nth-child(2){
            padding-left: 10px;
            span{
               padding-left: 20px;
                padding-right: 30px;
            }
        }
    }
}

#clients {
    .row {
        margin: 0;
    }
    @include breakpoint(md-down) {
        max-width: 34rem;
    }
    .icons {
        @include breakpoint(md-down) {
            flex-basis:33.33333%;
            &:nth-child(3n + 2) {
                text-align: center;
            }
            &:nth-child(3n) {
                text-align: right;
            }
            svg {
                margin-bottom: 1rem;
            }
        }
        @include breakpoint(sm-down) {
            svg {
                max-width: 70%;
                max-height: 2.5rem;
            }
        }
    }
    svg {
        fill: $dark;
    }
}

.home-features {
    padding: 30px 25px;
    box-sizing: border-box;
    outline: none !important;
    @include breakpoint(xs) {
        padding: 50px 35px;
    }
    @include breakpoint(sm) {
        padding: 58px 51px;
    }
    @include breakpoint(sm-down) {
        margin: 0 !important;
    }
    &#search {
        background-color: $yellow_sub;
    }
    &#pick {
        background-color: $red_sub;
    }
    &#export {
        background-color: $green_sub;
    }
    .left-col {
        position: relative;
    }
    p {
        @include breakpoint(md) {
            margin-bottom: 4rem;
        }
        span {
            font-weight: bold;
        }
    }
    a.learn-more {
        font-weight: bold;
        display: block;
        padding-bottom: 1.5rem;
        border-bottom: 1px solid $dark;
        margin-bottom: 2.5rem;
        @include breakpoint(md) {
            margin-bottom: 4rem;
        }
    }
    a.question {
        font-size: 0.875rem;
        line-height: 1.25rem;
        color: $dark_sub;
        text-decoration: underline;
        @include breakpoint(md) {
            position: absolute;
            bottom: 0;
            left: 0.5rem;
        }
    }
    .icon-ctn {
        position: relative;
        width: 100%;
        height: auto;
        margin-bottom: 1rem;
        @include breakpoint(md) {
            margin-bottom: 0;
        }
        video {
            width: 100%    !important;
            height: auto   !important;
        }
    }
}



#extras {
    .icon-ctn {
        position: relative;
        width: 4.6875rem;
        height: 4.6875rem;
    }
    h3 {
        margin-top: 20px;
    }
}

#what-we-do {
    background: $light_grey;
    padding: 50px auto;
    @include breakpoint(xs) {
        padding: 50px 35px;
    }
    @include breakpoint(sm) {
        padding: 58px 51px;
    }
    @include breakpoint(sm-down) {
        margin: 0 !important;
    }
    video {
        width: 100%;
        margin: 25px 0;
        border-radius: 10px;
        @include breakpoint(md) {
            width: 85%;
        }
    }
    .row{
        display: flex;
        align-items: center;
        @include breakpoint(md-down) {
            flex-direction: column-reverse;
        }
        p{
            opacity: 0.75;
        }
        .cta{
            a{
                border: none;
            }
            margin: 50px 0;
        }
    }
}

// cta-affiliate is from affiliate page, but same styling
#start-now, #cta-affiliate {
    .col1 {
        padding-top: 2rem;
        padding-bottom: 2rem;
    }
    h4 {
        margin-bottom: 3rem;
        @include breakpoint(md) {
            margin-bottom: 3.5rem;
        }
    }
    p.signin {
        margin-top: 2.5rem;
        font-size: 0.6875rem;
        a {
            font-size: inherit;
            text-decoration: underline;
        }
    }
    .icon-ctn {
        background: $yellow_sub;
        width: 100%;
        height: 100%;
    }
    .btn span {
        font-weight: bold;
    }
}

#cta-home{
    border-top: 1px solid black;
    &.no-border{
        border-top:none !important;
    }
    .cta-button{
        margin-top: 3.75rem;
    }
}

